tests/baselines/reference/ifElseWithStatements1.errors.txt
==== tests/cases/compiler/ifElseWithStatements1.ts (2 errors) ====
    if (true)
        f();
        ~
!!! ifElseWithStatements1.ts(2,5): error TS2095: Could not find symbol 'f'.
    else
        f();
        ~
!!! ifElseWithStatements1.ts(4,5): error TS2095: Could not find symbol 'f'.
    
    function foo(): boolean {
        if (true)
            return true;
        else
            return false;
    }
    